# aznamematch

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: benchmark.yaml  generation.yaml
data/adversarial/: README.md
data/adversarial/homoglyph_v1/: homoglyphs.parquet  homoglyphs_sample.csv
data/sample/: README.md  identities_sample.csv  pairs_sample.csv  surfaces_sample.csv
docs/: DESIGN.md  dataset_schema.md  homoglyphs.md  methodology.md  suffix_matrix.md  transliteration.md
docs/rules/: no-real-persons.md  provenance-metadata.md  seeding.md  transliteration-fidelity.md  zero-fabricated-numbers.md
results/: README.md  SUMMARY.md  accuracy.md  breakdown.md  cost.md  homoglyph.md  perf.md  results.json  robustness_fairness.md
scripts/: reproduce.sh
src/aznamematch/: __init__.py  cli.py  config.py  seeds.py  textnorm.py
src/aznamematch/blocking/: __init__.py  blockers.py
src/aznamematch/components/: __init__.py  az_family.txt  az_given.txt  denylist.txt  org_tokens.txt  patronymic.txt
src/aznamematch/eval/: __init__.py  breakdown.py  calibration.py  cost.py  fairness.py  metrics.py  report.py  robustness.py  runner.py
src/aznamematch/generate/: __init__.py  canonical.py  homoglyph.py  noise.py  pairs.py  pipeline.py  suffix_matrix.py  surface.py
src/aznamematch/generate/translit/: __init__.py  adhoc.py  az_cyrl.py  base.py  ru_latn.py
src/aznamematch/matchers/: __init__.py  base.py  hybrid.py  lexical.py  llm.py  normalize.py  phonetic.py  regression_v1.py  semantic.py
tests/: test_blocking.py  test_canonical.py  test_config.py  test_eval.py  test_homoglyph.py  test_matchers_base.py  test_matchers_hybrid.py  test_matchers_lexical.py  test_matchers_phonetic.py  test_matchers_regression.py  test_matchers_semantic.py  test_noise.py  test_pairs.py  test_pipeline.py  test_seeds.py  test_suffix_matrix.py  test_translit.py
