[project]
name = "aznamematch"
version = "1.0.0"
description = "A reproducible benchmark for AZ<->RU<->EN cross-script name matching (sanctions / AML / fraud screening)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "AzNameMatch contributors" }]
keywords = [
    "entity-resolution",
    "name-matching",
    "transliteration",
    "azerbaijani",
    "benchmark",
    "aml",
    "sanctions-screening",
]

# Core dependencies — everything the synthetic-data generation pipeline (Phases 0-4)
# needs. Matchers / semantic / LLM tiers are optional extras (added in later phases) so
# the generation install stays light and GPU/network-free.
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "pyarrow>=15.0",
    "pyyaml>=6.0",
    "typer>=0.12",
    "unidecode>=1.3",
]

[project.optional-dependencies]
# Lexical / phonetic / regression / semantic matcher tiers (Phase 6).
matchers = [
    "rapidfuzz>=3.6",
    "jellyfish>=1.0",
    "scikit-learn>=1.4",
    "sentence-transformers>=2.6",
]
# Optional, gated LLM matcher tier (Phase 6).
llm = ["llm>=0.40"]
# Plotting for the reporting view (Phase 7).
plots = ["matplotlib>=3.8"]
# Developer tooling.
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
aznamematch = "aznamematch.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aznamematch"]

# Component banks (*.txt) live inside the package and must ship with the wheel.
[tool.hatch.build.targets.wheel.force-include]
"src/aznamematch/components" = "aznamematch/components"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
